<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/soltextView"
        android:textSize="40sp"
        android:textAlignment="textEnd"

        style="@style/TEXT"
        android:layout_above="@id/resulttextView"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resulttextView"
        android:text="@string/_0"
        android:textSize="60sp"
        android:textAlignment="textEnd"

        style="@style/TEXT"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingVertical="5dp"
        android:background="#191717"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textColor="@color/white"
                android:backgroundTint="#D80215"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_openbracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/openbracket"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_closebracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/closebracket"
                android:textColor="@color/white"
                android:backgroundTint="#FF9800"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:backgroundTint="#DD4818"
                android:textSize="32sp"
                app:cornerRadius="76dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:backgroundTint="#DD4818"
                android:textSize="32sp"
                app:cornerRadius="76dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:backgroundTint="#DD4818"
                android:textSize="32sp"
                app:cornerRadius="76dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:backgroundTint="#DD4818"
                android:textSize="32sp"
                app:cornerRadius="76dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:backgroundTint="#D80215"
                android:textSize="20sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_decimal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:backgroundTint="#3F51B5"
                android:textSize="32sp"
                app:cornerRadius="76dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:backgroundTint="#DD4818"
                android:textSize="32sp"
                app:cornerRadius="76dp" />


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>